# abstractgraph-graphicalizer

./: .gitignore  README.md  pyproject.toml
data/PUBCHEM/: AID2631_active.sdf  AID2631_inactive.sdf  AID2631_info.txt  AID463230_inactive.sdf  AID463230_info.txt  AID492952_info.txt  AID588350_info.txt  AID624249_active.sdf  AID624249_inactive.sdf  AID624249_info.txt  AID651741_active.sdf  AID651741_inactive.sdf  AID651741_info.txt
docs/: ATTENTION.md  CHEMISTRY.md  DATA.md  GRAPH.md  IMAGE.md  RNA.md
notebooks/: _bootstrap.py
notebooks/examples/: example_chem_molecule_graphicalizer.ipynb  example_gdb_loader_statistics.ipynb  example_pubchem_loader_statistics.ipynb  example_qm9_loader_statistics.ipynb  example_zinc_loader_statistics.ipynb
scripts/: smoke_test.py
src/abstractgraph_graphicalizer/: __init__.py
src/abstractgraph_graphicalizer/attention/: __init__.py  preprocessor.py
src/abstractgraph_graphicalizer/chem/: __init__.py  gdb.py  mol_loader.py  molecules.py  pubchem.py  qm9.py  zinc.py
src/abstractgraph_graphicalizer/core/: __init__.py  protocols.py
src/abstractgraph_graphicalizer/data/: __init__.py  matrix.py
src/abstractgraph_graphicalizer/graph/: __init__.py  annotate.py  sequence.py  vector.py
src/abstractgraph_graphicalizer/image/: __init__.py  scene_graph.py
src/abstractgraph_graphicalizer/rna/: __init__.py  graphs.py
tests/: test_attention_imports.py  test_chemistry.py  test_data_graphicalizers.py  test_graph_annotation_graphicalizers.py  test_graph_graphicalizers.py  test_image_graphicalizers.py  test_rna_graphicalizers.py
(+1 files in other folders)
