[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractgraph-graphicalizer"
version = "0.1.0"
description = "Raw-data-to-NetworkX graphicalizers for the AbstractGraph ecosystem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "torch>=2.0",
]

[project.optional-dependencies]
chem = [
  "rdkit>=2023.9.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
